Refactor project structure and update dependencies for Etherith platform. Transitioned from Prisma to Drizzle ORM, updated environment variables, and enhanced authentication with Discord OAuth. Improved README with detailed setup instructions and project overview. Adjusted Tailwind CSS configuration and added new UI components. Implemented Jest for testing and refined database setup scripts.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/etherith_dev"
+# Database (D1 for production, local SQLite for development)
+DATABASE_URL="file:./dev.db"
 
-# Authentication
-NEXTAUTH_SECRET="your-super-secret-key-here"
+# Discord OAuth
+DISCORD_CLIENT_ID="your-discord-client-id"
+DISCORD_CLIENT_SECRET="your-discord-client-secret"
+
+# NextAuth
+NEXTAUTH_SECRET="your-nextauth-secret"
 NEXTAUTH_URL="http://localhost:3000"
 
 # IPFS (Pinata)
@@ -12,9 +16,9 @@ PINATA_SECRET_API_KEY="your-pinata-secret-key"
 # AI Services
 OPENAI_API_KEY="your-openai-api-key"
 
-# External Services
-REDIS_URL="redis://localhost:6379"
-SENTRY_DSN="your-sentry-dsn"
+# Cloudflare
+CLOUDFLARE_ACCOUNT_ID="your-account-id"
+CLOUDFLARE_API_TOKEN="your-api-token"
 
 # Development
 NODE_ENV="development"
