Implement Etherith Authentication Worker with user signup and database setup. Update wrangler.toml for new assets configuration and add D1 database binding. Enhance CORS handling and error responses in the authentication process.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,12 +6,8 @@ compatibility_flags = ["nodejs_compat"]
 command = "npm run build"
 
 # Next.js Pages configuration
-[pages_build_output_dir]
-value = ".next"
-
-# Use the Next.js adapter
-[adapter]
-name = "@cloudflare/next-on-pages"
+[assets]
+directory = ".next"
 
 [vars]
 NODE_ENV = "production"
