Enhance AI Memory Analyzer with active listening features and database integration. Update drizzle.config.ts for D1 database configuration and add new user queries schema. Refactor conversation handling in memory-weaver page for improved user interaction and analysis flow. Update Jest configuration for increased coverage thresholds and add testing library dependencies. Improve error handling and response structure in AI analysis worker.

--- a/workers/ai-memory-analyzer/package.json
+++ b/workers/ai-memory-analyzer/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "node test-ai-worker.js",
+    "test:local": "node test-local.js"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250830.0",
