--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:ai-worker": "node test-ai-worker.js",
     "deploy:cloudflare": "npm run build:cloudflare && wrangler pages deploy dist --project-name etherith"
   },
   "dependencies": {
@@ -32,6 +33,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@testing-library/user-event": "^14.6.1",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
