--- a/workers/ai-memory-analyzer/wrangler.toml
+++ b/workers/ai-memory-analyzer/wrangler.toml
@@ -5,6 +5,11 @@ compatibility_date = "2024-01-01"
 [ai]
 binding = "AI"
 
+[[d1_databases]]
+binding = "DB"
+database_name = "etherith-db"
+database_id = "042a5e9c-d027-42e9-aeab-cf5302a77af7"
+
 [env.production]
 name = "ai-memory-analyzer-prod"
 
